# third-contest

./: README.md  first_season.md  intro.md  pack.sh
doc/: first_season.md
src/: CMakeLists.txt  Column.h  Common.h  DtsConf.h  Index.h  Schema.h  Table.h  ThreadPool.hpp  Util.h  create_table.sql  demo.cpp  schema.info  start.sh
src/common/: Common.h  DtsConf.h  FileChunk.h  metadata.cpp  metadata.h
src/entity/: Column.h  Index.h
src/highdts/: CMakeLists.txt  common.h  file_reader.cpp  file_reader.h  file_split.cpp  file_split.h  file_util.h  loaddata_worker.cpp  loaddata_worker.h  metadata.cpp  metadata.h
src/utils/: BaseThread.cpp  BaseThread.h  BitmapManager.hpp  ChunkSet.h  MQ.hpp  ThreadPool.hpp  ThreadSafaQueue.h  ThreadSafeQueue.h  Util.h  baseerror.cpp  baseerror.h  logger.h  newmysql.cpp  newmysql.h  strings.hpp
src/workers/: BitmapManager.hpp  FileReader.cpp  FileReader.h  FileSplitter.cpp  FileSplitter.h  LineCleaner.cpp  LineCleaner.h  LineFilter.cpp  LineFilter.h  LoadDataWorker.cpp  LoadDataWorker.h  LoadFileWriter.cpp  LoadFileWriter.h  MetadataManager.cpp  MetadataManager.h  bitmap_manager.cpp  bitmap_manager.hpp  file_reader.cpp  file_reader.h  file_split.cpp  file_split.h  global_obj.hpp  line_filter.cpp  line_filter.h  loaddata_worker.cpp  loaddata_worker.h  metadata_manager.cpp
